fixing footer on mobile

--- a/main/new.css
+++ b/main/new.css
@@ -153,5 +153,6 @@ text-transform: uppercase;
         display: flex;
         flex-direction: column;
         width: 100%;
+        margin: 0 auto;
     }
 }
